--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,9 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
+      - name: Dar permiso de ejecución a mvnw
+        run: chmod +x ./mvnw
+
       - name: Run tests
         run: ./mvnw test
 
