--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,6 +12,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Dar permiso de ejecución a mvnw
+        run: chmod +x ./mvnw
+
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
